--- a/src/planner/PlannerDate.scss
+++ b/src/planner/PlannerDate.scss
@@ -6,7 +6,7 @@
     .date {
         padding: .5em;
         width: 15%;
-        background: azure;
+        background: #d5eff6;
         text-align: center;
 
         .day-of-week {
